fix thumb spacing

--- a/app/assets/stylesheets/movies.css
+++ b/app/assets/stylesheets/movies.css
@@ -4,8 +4,8 @@
 .movie-index{
     background-color: #141414;
     padding-top: 80px;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 4.1vw;
+    padding-right: 4.1vw;
     height: 2100px;
     color: white;
     font-family: 'Open Sans', sans-serif;
@@ -39,7 +39,9 @@
 .movie-thumb-row{
     display: flex;
     width:100%;
-    justify-content: center;
+    /* justify-content: center; */
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .movie-thumb{
